--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
 
 	"save_samples": false,
 	"vt_key": "GET_YOUR_OWN",
+	"submit_to_vt": false,
 
     "cuckoo_enabled": false,
     "cuckoo_url_base": "http://127.0.0.1:8090",
